fixed weird alignments

--- a/regular.css
+++ b/regular.css
@@ -75,7 +75,6 @@
   background: #313244;
 
   border-radius: 2.5px;
-  margin-bottom: 5px;
 }
 
 .player .lqd-seek-inner {
